--- a/ATBM-Final/src/main/resources/application.properties
+++ b/ATBM-Final/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/atbm
+spring.datasource.username=root
+spring.datasource.password=baokaka
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
