--- a/ATBM-Final/src/main/resources/application.properties
+++ b/ATBM-Final/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 
-spring.datasource.url=jdbc:mysql://localhost:3307/atbm
+spring.datasource.url=jdbc:mysql://localhost:3306/atbm
 spring.datasource.username=root
-spring.datasource.password=atbm
+spring.datasource.password=baokaka
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
